--- a/React/shop/src/App.css
+++ b/React/shop/src/App.css
@@ -2,10 +2,15 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.main-bg {
+  height: 300px;
+  background-image: url('./shoes.jpeg');
+  background-size: cover;
+  background-position: flex;
 }
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
